--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: "Cafe24Ssurround", "Cafe24SsurroundAir";
+  font-family: "Cafe24Ssurround", "Cafe24SsurroundAir", "KOTRAHOPE";
 }
 
 @font-face {
@@ -10,4 +10,20 @@
 @font-face {
   font-family: "Cafe24SsurroundAir";
   src: url(/src/assets/fonts/Cafe24SsurroundAir.ttf);
+}
+
+@font-face {
+  font-family: "KOTRAHOPE";
+  src: url(/src/assets/fonts/KOTRA\ HOPE.ttf);
+}
+
+@font-face {
+  font-family: "NanumSquareNeo-Variable";
+  src: url(/src/assets/fonts/NanumSquareNeo-Variable.woff) format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+html {
+  font-size: 30px;
 }
